ui/bug: properties pane would overlap bottom toolbar.

--- a/public/stylesheets/override.css
+++ b/public/stylesheets/override.css
@@ -8,3 +8,8 @@
     top: 0.5em;
 }
 
+.propertiesPane
+{
+    bottom: 3em;
+}
+
